fixed navbar collapse issue

--- a/main.css
+++ b/main.css
@@ -95,8 +95,8 @@ ul li:hover {
 
 .about img {
   margin-top: 5px;
-  width: 120px;
-  height: 120px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
   border: solid 3px #4d4f53;
   float: left;
